feat: Add socet.io

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "homepage": "https://github.com/zhongzhi107/rpi-web#readme",
   "dependencies": {
     "debug": "^2.6.3",
-    "koa": "^2.2.0"
+    "koa": "^2.2.0",
+    "koa-static": "^3.0.0",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3"
   }
 }
